note-app/frontend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noteapp-dep
  namespace: noteapp-namespace
spec:
  replicas: 1
  selector:
    matchLabels:
      app: noteapp

  template:
    metadata:
      labels:
        app: noteapp
    spec:
      volumes:
        - name: images-volume
          persistentVolumeClaim:
            claimName: noteapp-claim

      containers:
        - name: noteapp-frontend
          image: yves6000/noteapp-frontend:1.2
          volumeMounts:
            - mountPath: /usr/src/app/images
              name: images-volume
