note-app/frontend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: noteapp-svc
  namespace: noteapp-namespace
spec:
  type: ClusterIP
  selector:
    app: noteapp
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
